# reflex-diffing

./: .gitignore  LOG.md  README.md  evaluate_correctness.py  generate_rollouts.py  main.py  plot_accuracy.py  pyproject.toml
rollouts/: rollouts_instruct_seed0.jsonl  rollouts_instruct_seed0_graded.jsonl  rollouts_instruct_seed1.jsonl  rollouts_instruct_seed1_graded.jsonl  rollouts_instruct_seed2.jsonl  rollouts_instruct_seed2_graded.jsonl
