[project]
name = "reflex-diffing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "math-verify>=0.9.0",
    "modal>=1.5.2",
    "transformers>=5.14.1",
    "vllm>=0.25.1",
]
